--- a/docs/x_509.md
+++ b/docs/x_509.md
@@ -1,6 +1,6 @@
 # Creating and using an X.509 certificate
 
-You can test creating your own manifests using the pre-built certificates in the [c2patool repo sample folder](https://github.com/contentauth/c2patool/tree/main/sample). To use your own generated certificates, specify the path to the certificate files in the following manifest fields:
+If you don't specify them on the command-line, the c2patool uses a built-in certificate and private key.  You can also the example certifcate and private key provided in the [c2patool repo sample folder](https://github.com/contentauth/c2patool/tree/main/sample). To use your own certificate and private key, specify the path to the files in the following manifest fields:
 
 - `private_key`
 - `sign_cert`
